# Simple-System-Linearizer

./: .gitmodules  CMakeLists.txt  README.md  system_linearizer.c  system_linearizer.h  test_linearizer.c
docs/: Doxyfile  index.html
docs/search/: all_0.js  pages_0.js
